k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: sereno
  labels:
    app: portal
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: portal
